# HD-Radeon-Compute

./: .gitignore  CMakeLists.txt  Makefile  cs_image.cpp  cs_image.h  dummy_ps.asm  dummy_ps_ec.h  dummy_vs.asm  evergreen_reg.h  evergreen_reg_auto.h  first_cs.asm  main.cpp  r800_state.cpp  r800_state.h  radeon.cpp  radeon.hpp  radeon_cs.cpp  radeon_cs.hpp
tests/: CMakeLists.txt  main.cpp
tests/01_basic_no_shader/: CMakeLists.txt
tests/02_noop_shader/: CMakeLists.txt  test.cpp
tests/03_single_copy/: CMakeLists.txt  shader.asm  test.cpp
tests/04_multi_copy/: CMakeLists.txt  shader.asm  test.cpp
tests/05_atomics/: CMakeLists.txt  shader.asm  test.cpp
tests/06_loop/: CMakeLists.txt  shader.asm  test.cpp
tests/07_work_2d/: CMakeLists.txt  shader.asm  test.cpp
tests/08_add_example/: CMakeLists.txt  shader.asm  test.cpp
tests/09_matrix_multiplication/: shader.asm  test.cpp
tests/10_PCI_bandwidth/: CMakeLists.txt  shader.asm  test.cpp
tests/11_indexed_rat_id/: CMakeLists.txt  shader.asm  test.cpp
tests/testpr/: CMakeLists.txt  shader.asm  test.cpp
